--- a/music-lessons/views/index.ejs
+++ b/music-lessons/views/index.ejs
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('./partials/header') %>
+
+
+
+<h3>Which Instrument would you like to play?</h3>
+
+<div id="instruments">
+    <a href="">GUITAR</a>
+    <a href="">DRUMS</a>
+    <a href="">PIANO</a>
+    <a href="">BASS</a>
+    <a href="">VOCALS</a>
+
+</div>
+
+
+
+
+<%- include('./partials/footer') %>
+
