--- a/music-lessons/views/index.ejs
+++ b/music-lessons/views/index.ejs
@@ -5,11 +5,11 @@
 <h3>Which Instrument would you like to play?</h3>
 
 <div id="instruments">
-    <a href="">GUITAR</a>
-    <a href="">DRUMS</a>
-    <a href="">PIANO</a>
-    <a href="">BASS</a>
-    <a href="">VOCALS</a>
+    <a href="/teachers">GUITAR</a>
+    <a href="/teachers">DRUMS</a>
+    <a href="/teachers">PIANO</a>
+    <a href="/teachers">BASS</a>
+    <a href="/teachers">VOCALS</a>
 
 </div>
 
