--- a/music-lessons/views/partials/header.ejs
+++ b/music-lessons/views/partials/header.ejs
@@ -10,10 +10,16 @@
   <body>
 
     <nav>
-        <a href="">Home</a>
-        <a href="">Log In</a>
+        <div id="home"><a href="/">HOME</a></div>
+        <div id="teacher-signup"><a href="teachers/new">Become a Teacher</a></div>
+        <% if (user) { %>
+            <a href="/logout">LOG OUT</a>
+          <% } else { %>
+            <div id="log-in"><a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a></div>
+          <% } %>
     </nav>
     <h1><%= title %></h1>
+
 
 
 
