--- a/music-lessons/views/teachers/index.ejs
+++ b/music-lessons/views/teachers/index.ejs
@@ -18,8 +18,8 @@
           <td><%= teacher.experience %></td>
           <td><a href="/teachers/<%= teacher._id %>">More about <%= teacher.name %> </a>
             <!-- DELETE BUTTON -->
-          <form action="/teachers/<%= teacher._id %>" method="DELETE" style="display: inline;">
-            <input type="hidden" name="delete" value="delete">
+          <form action="/teachers/<%= teacher._id %>?_method=DELETE" method="POST" style="display: inline;">
+            <input type="hidden" name="_method" value="DELETE">
             <button type="submit">Delete</button>
          </form></td>
         </tr>
@@ -28,7 +28,7 @@
       </tbody>
     </table>
 
-
+   
 
 
 <%- include('../partials/footer') %>
