--- a/music-lessons/views/partials/header.ejs
+++ b/music-lessons/views/partials/header.ejs
@@ -13,7 +13,7 @@
         <div id="home"><a href="/">HOME</a></div>
         <div id="teacher-signup"><a href="/teachers/new">Become a Teacher</a></div>
         <div id="create-profile"><a href="/teachers/edit">Profile</a></div>
-        <div id="lessons"><a href="/lessons/new">Lessons</a></div>
+        <div id="lessons"><a href="/id/lessons/new">Lessons</a></div> 
         <% if (user) { %>
             <a href="/logout">LOG OUT</a>
           <% } else { %>
